--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -24,7 +24,8 @@
   
   "dependencies": {
     "express": "3.1.0",
-    "jade": "0.28.1"
+    "jade": "0.28.1",
+    "nano": "3.3.7"
   },
   
   "devDependencies": {
