--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -25,7 +25,10 @@
   "dependencies": {
     "express": "3.1.0",
     "jade": "0.28.1",
-    "nano": "3.3.7"
+    "nano": "3.3.7",
+    "bcrypt": "0.7.5",
+    "connect-couchdb": "0.2.5",
+    "connect-flash": "0.1.0"
   },
   
   "devDependencies": {
