--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hack-warz-score-board",
+  "name": "Hack-Express",
   "version": "0.0.1",
   "private": true,
   
@@ -25,7 +25,7 @@
   "dependencies": {
     "express": "3.1.0",
     "jade": "0.28.1",
-    "nano": "3.3.7",
+    "nano": "3.3.8",
     "bcrypt": "0.7.5",
     "connect-couchdb": "0.2.5",
     "connect-flash": "0.1.0"
