--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -29,7 +29,8 @@
     "connect-flash": "0.1.1",
     "mongodb": "1.3.3",
     "mongoose": "3.6.11",
-    "connect-mongo": "git://github.com/kcbanner/connect-mongo.git#f199378"
+    "connect-mongo": "git://github.com/kcbanner/connect-mongo.git#f199378",
+    "winston": "0.7.1"
   },
   
   "devDependencies": {
