--- a/hack-express/setup/nginx.conf
+++ b/hack-express/setup/nginx.conf
@@ -1,6 +1,3 @@
-# For more information on configuration, see:
-#   * Official English Documentation: http://nginx.org/en/docs/
-#   * Official Russian Documentation: http://nginx.org/ru/docs/
 
 user  nginx;
 worker_processes  1;
@@ -51,9 +48,18 @@ http {
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
     include /etc/nginx/conf.d/*.conf;
+    
+    server {
+        listen       80;
+        server_name  hack-express
+		     192.168.58.128;
+        rewrite ^ https://$server_name$request_uri? permanent;
+    }
 
     server {
         listen       443;
+        server_name  hack-express
+		     192.168.58.128;
 
         ssl     on;
         ssl_certificate /etc/ssl/hack-express-dev.crt;
@@ -64,34 +70,25 @@ http {
         ssl_session_cache   shared:SSL:10m;
         ssl_session_timeout  10m;
 
-        server_name  hackwarz;
-
-        if ($host = 'hackwarz' ) {
-                rewrite  ^/(.*)$  https://hackwarz/$1  permanent;
-        }
-
-        location /images/\.(jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf) {
-          root /hackwarz/hack-express/public;
+        location ~* images/\.(jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf) {
+          root /hackwarz/hack-express/public/;
           autoindex on;
-          autoindex_exact_size off;
           access_log off;
-          expires 5m;
+          # expires max; # Disabled for now
         }
         
-        location /stylesheets/\.(js|css|min\.css)$ {
-          root /hackwarz/hack-express/public;
+        location ~* stylesheets/\.(js|css|min\.css) {
+          root /hackwarz/hack-express/public/;
           autoindex on;
-          autoindex_exact_size off;
           access_log off;
-          expires 5m;
+          # expires max; # Disabled for now
         }
         
-        location /javascripts/\.(js|css|min\.css)$ {
-          root /hackwarz/hack-express/public;
+        location ~* javascripts/\.(js|css|min\.css) {
+          root /hackwarz/hack-express/public/;
           autoindex on;
-          autoindex_exact_size off;
           access_log off;
-          expires 5m;
+          # expires max; # Disabled for now
         }
         
         location / {
@@ -99,73 +96,16 @@ http {
           proxy_set_header   Host                 $http_host;
           proxy_set_header   X-Real-IP            $remote_addr;
           proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-          proxy_set_header   X-Forwarded-Proto $scheme; #https
-          
+          proxy_set_header   X-Forwarded-Proto $scheme;
           proxy_set_header   X-NginX-Proxy    true;
-          proxy_set_header   Connection "";
-          proxy_http_version 1.1;
-          proxy_cache one;
-          proxy_cache_key sfs$request_uri$scheme;
-          proxy_pass         https://hack_express_upstream;
-          autoindex on;
-          autoindex_exact_size off;
+          # proxy_set_header   Connection "";
+          proxy_http_version 1.1; # Use of web sockets
+          proxy_set_header Upgrade $http_upgrade; # Use of web sockets
+          proxy_set_header Connection "upgrade"; # Use of web sockets
+          proxy_buffering on; # Required by proxy_cache
+          proxy_cache one; # Cache location
+          proxy_cache_key sfs$request_uri$scheme; # Key used to for cache MD5
+          proxy_pass         https://hack_express_upstream; # Upstream
         }
-
-        #location /errors {
-        #  internal;
-        #  alias /home/hackadmin/Documents/repos/hackwarz/hack-express/public/errors;
-        #}
-
-        # redirect server error pages to the static page /40x.html
-        #
-        #error_page  404              /404.html;
-        #location = /40x.html {
-        #    root   /usr/share/nginx/html;
-        #}
-
-        # redirect server error pages to the static page /50x.html
-        #
-        #error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
-        #    root   /usr/share/nginx/html;
-        #}
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443;
-    #    server_name  localhost;
-
-    #    ssl                  on;
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_timeout  5m;
-
-    #    ssl_protocols  SSLv2 SSLv3 TLSv1;
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers   on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
 }
