--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -30,7 +30,8 @@
     "mongodb": "1.3.9",
     "mongoose": "3.6.11",
     "connect-mongo": "git://github.com/kcbanner/connect-mongo.git#f199378",
-    "winston": "0.7.1"
+    "winston": "0.7.1",
+    "express-validator": "0.6.0"
   },
   
   "devDependencies": {
