--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -23,15 +23,15 @@
   },
   
   "dependencies": {
-    "express": "3.3.1",
+    "express": "3.3.4",
     "jade": "0.32.0",
     "bcrypt": "0.7.6",
     "connect-flash": "0.1.1",
-    "mongodb": "1.3.10",
-    "mongoose": "3.6.13",
-    "connect-mongo": "git://github.com/kcbanner/connect-mongo.git#f199378",
+    "mongodb": "1.3.11",
+    "mongoose": "3.6.14",
+    "connect-mongo": "0.3.3",
     "winston": "0.7.2",
-    "express-validator": "0.6.0",
+    "express-validator": "0.7.0",
     "jquery": "1.8.3"
   },
   
