--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -29,6 +29,7 @@
     "connect-flash": "0.1.1",
     "mongodb": "1.3.11",
     "mongoose": "3.6.14",
+    "gridfs-stream": "0.4.0",
     "connect-mongo": "0.3.3",
     "winston": "0.7.2",
     "express-validator": "0.7.0",
