--- a/hack-express/package.json
+++ b/hack-express/package.json
@@ -33,7 +33,8 @@
     "connect-mongo": "0.3.3",
     "winston": "0.7.2",
     "express-validator": "0.7.0",
-    "jquery": "1.8.3"
+    "jquery": "1.8.3",
+    "async": "0.2.9"
   },
   
   "devDependencies": {
